--- a/templates/book_list.html
+++ b/templates/book_list.html
@@ -56,7 +56,7 @@
                         <!--</button>-->
                         <a href="{% url 'ReadingRec:book_delete' book.pk %}" class="btn btn-danger btn-sm">削除</a>
                         <a href="{% url 'ReadingRec:impression_list' book.pk %}"
-                           class="btn btn-outline-info btn-sm">感想一覧</a>
+                           class="btn btn-outline-info btn-sm">読書メモ</a>
                     </td>
                 </tr>
                 {% endfor %}
