--- a/templates/impression_list.html
+++ b/templates/impression_list.html
@@ -3,9 +3,9 @@
 {% block contents %}
 
 <div class="col-md-12 main">
-    <h2 class="page-header">感想一覧</h2>
+    <h2 class="page-header">読書メモ一覧</h2>
     <hr>
-    <a href="{% url 'ReadingRec:impression_add' book.id %}" class="btn btn-primary btn-sm my-3">追加</a>
+    <a href="{% url 'ReadingRec:impression_add' book.id %}" class="btn btn-primary btn-sm my-3">読書メモ追加</a>
 
     <div class="table-responsive">
         <table class="table table-striped table-bordered">
